--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script type="text/javascript" src="scripts/common.js" ></script>
-<script>
+<!-- <script>
     var hours = "0";
     var minutes = "3";
     var seconds = "1";
-</script>
+</script> -->
 
 <!-- /SCRIPTS -->
 
